--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "cnnparent",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cross-env NODE_ENV=development DEBUG=app:* node src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cross-env": "^3.2.4",
-    "debug": "^2.6.3"
+    "debug": "^2.6.3",
+    "minimist": "^1.2.0"
   }
 }
