--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=development DEBUG=app:* node src/index.js"
+    "start": "cross-env NODE_ENV=development DEBUG=app:* node index.js",
+    "train": "cd cnn-text-classification-tf && python train.py"
   },
   "author": "",
   "license": "ISC",
