--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=development DEBUG=app:* node test.js",
     "start": "cross-env NODE_ENV=development DEBUG=app:* node index.js",
     "train": "cd cnn-text-classification-tf && python train.py"
   },
