--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "cross-env NODE_ENV=development DEBUG=app:* node test.js",
     "start": "cross-env NODE_ENV=development DEBUG=app:* node index.js",
-    "train": "cd cnn-text-classification-tf && python train.py"
+    "training": "cross-env NODE_ENV=development DEBUG=app:* node training.js"
   },
   "author": "",
   "license": "ISC",
