--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=development DEBUG=app:* node test.js",
+    "test": "cross-env NODE_ENV=development DEBUG=app:* mocha **/*.spec.js -w",
     "start": "cross-env NODE_ENV=development DEBUG=app:* node index.js",
     "training": "cross-env NODE_ENV=development DEBUG=app:* node training.js"
   },
@@ -13,6 +13,12 @@
   "dependencies": {
     "cross-env": "^3.2.4",
     "debug": "^2.6.3",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "stopword": "^0.1.1",
+    "unescape": "^0.2.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.3.0"
   }
 }
